# trello-cli

./: .gitignore  README.md  pyproject.toml
tests/: test_main.py
trellocli/: TrelloAPIclient.py  TrelloCLI.py  __init__.py  __main__.py  models.py
